--- a/assistant_relay/config.json
+++ b/assistant_relay/config.json
@@ -7,6 +7,7 @@
   "startup": "before",
   "url": "https://github.com/Apipa169/Assistant-Relay-for-Hassio",
   "boot": "auto",
+  "host_network": true,
   "options": {
   },
   "schema": {},
